# ChangeLog for net-ftp/ncftp
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /var/cvsroot/gentoo-x86/net-ftp/ncftp/ChangeLog,v 1.2 2002/06/19 18:58:51 bangert Exp $

*ncftp-3.1.3 (19 Jun 2002)

  19 Jun 2002; Thilo Bangert <bangert@gentoo.org> ncftp-3.1.3.ebuild :
  
  version bump - added LICENSE

*ncftp-3.0.4 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.