@@ -1,0 +1,1 @@
+MD5 605e735209ab30d0f129d079c06705e4 ncftp-3.1.4-src.tar.bz2 393303
