@@ -1,6 +1,12 @@
 # ChangeLog for net-ftp/ncftp
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-ftp/ncftp/ChangeLog,v 1.2 2002/06/19 18:58:51 bangert Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-ftp/ncftp/ChangeLog,v 1.3 2002/07/07 15:01:13 stroke Exp $
+
+*ncftp-3.1.4 (07 Jul 2002)
+
+  07 Jul 2002; Gabriele Giorgetti <stroke@gentoo.org> ncftp-3.1.4.ebuild :
+  
+  new version
 
 *ncftp-3.1.3 (19 Jun 2002)
 
